fixing padding on mobile

--- a/src/components/collection--single-artist.scss
+++ b/src/components/collection--single-artist.scss
@@ -441,7 +441,7 @@ MEDIA QUERIES ---> MEDIA QUERIES ---> MEDIA QUERIES ---> MEDIA QUERIES ---> MEDI
         }
 
         .single-artist--wrapper {
-            padding: var(--nav-height) 0 40px 0;
+            padding: 0 0 40px 0;
 
             .slide-box.mobile {
                 display: block;
