--- a/src/components/page--tour-dates.scss
+++ b/src/components/page--tour-dates.scss
@@ -199,7 +199,7 @@
 @media screen and (max-width: 767px) {
     .tour-page {
         margin-top: var(--nav-height);
-        padding: 30px 0 30px 0;
+        padding: 0px 0 30px 0;
     
         .tour-page-wrapper {
 
